@@ -1,3 +1,8 @@
+2006-12-02  Andrew Pinski  <pinskia@gmail.com>
+
+	PR tree-opt/29984
+	* gcc.dg/tree-ssa/reassoc-12.c: New test.
+
 2006-12-01  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
 
 	PR c++/30022
